--- a/RecipeApp/Pages/Index.razor
+++ b/RecipeApp/Pages/Index.razor
@@ -6,4 +6,5 @@
 
 Welcome to the recipe application where you can have your own recipe list.
 
-<SurveyPrompt Title="How is this application work for you?" />
+
+<RecipeHome/>
