--- a/RecipeApp/Pages/_Layout.cshtml
+++ b/RecipeApp/Pages/_Layout.cshtml
@@ -8,6 +8,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
+    <title> Recipe App </title>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="RecipeApp.styles.css" rel="stylesheet" />
