--- a/RecipeApp/Pages/_Layout.cshtml
+++ b/RecipeApp/Pages/_Layout.cshtml
@@ -30,5 +30,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="~/blazor-modal.js"></script>
 </body>
 </html>
