--- a/RecipeApp/Shared/RecipeCard.razor
+++ b/RecipeApp/Shared/RecipeCard.razor
@@ -4,7 +4,7 @@
 
 
 <a class="card text-decoration-none px-2 py-2 mx-2 my-2" style="width: 18rem;" href="/RecipeDetail/@Recipe.Id">
-    <img class="card-body-image" src="@Recipe.Image" alt="@Recipe.Image" width="100%" heigth="30%">
+    <img class="img-thumbnail image-card" style="width: auto; height: 150px;" src="@Recipe.Image" alt="@Recipe.Image">
     <div class="card-body">
         <p class="card-text text-black">
             <strong>@Recipe.Name</strong>
