--- a/RecipeApp/Pages/Index.razor
+++ b/RecipeApp/Pages/Index.razor
@@ -1,10 +1,13 @@
 ﻿@page "/"
 
+
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, welcome to the home page!</h1>
+<p>Welcome to the recipe application where you can have your own recipe list.</p>
 
-Welcome to the recipe application where you can have your own recipe list.
+
+    <RecipeHome/>
 
 
-<RecipeHome/>
+
