--- a/RecipeApp/Pages/RecipeHome.razor
+++ b/RecipeApp/Pages/RecipeHome.razor
@@ -6,14 +6,15 @@
 @inject IRecipeData Data
 @inject RecipeState State
 
+
+
+<input class="col-9 col-lg-6 px-2 py-2 mx-2 my-2"
+       @bind-value="SearchString"
+       @bind-value:event="onchange"
+       @oninput="Search"
+       placeholder="Search Everything ..."/>
 <div class="d-flex flex-column">
-
-
-    <input class="w-25 px-2 py-2 mx-2 my-2"
-            @bind-value="SearchString"
-           @bind-value:event="onchange"
-           @oninput="Search"
-           placeholder="Search Everything ..."/>
+   
 
 
     @if (RecipeList == null)
@@ -22,16 +23,20 @@
     }
     else
     {
-        <div class="d-flex">
+        <div class="row">
             @if (RecipeList.Count == 0)
             {
                 <p> Nothing found ... </p>
             }
             else
             {
-                @foreach (var recipe in RecipeList)
+                @foreach (var recipe in RecipeList.Select((rec, index)=> new {rec, index}))
                 {
-                    <RecipeCard Recipe="@recipe" ClassGroup="d-flex"/>
+                   
+                        <div class="col-lg-3 col-9">
+                            <RecipeCard Recipe="@recipe.rec" ClassGroup=""/>
+                        </div>
+                    
                 }
             }
 
