--- a/RecipeApp/wwwroot/css/site.css
+++ b/RecipeApp/wwwroot/css/site.css
@@ -64,7 +64,7 @@ a, .btn-link {
     }
 
 .dialog-container {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -73,7 +73,6 @@ a, .btn-link {
     z-index: 2000;
     display: flex;
     animation: dialog-container-entry 0.01s;
-    
 }
 
 
@@ -134,3 +133,7 @@ a, .btn-link {
     padding: 0.5rem 3rem 1rem 0;
 }
 
+.image-card img {
+    width: auto;
+    height: 150px;
+}
