--- a/RecipeApp/wwwroot/css/site.css
+++ b/RecipeApp/wwwroot/css/site.css
@@ -133,7 +133,41 @@ a, .btn-link {
     padding: 0.5rem 3rem 1rem 0;
 }
 
-.image-card img {
-    width: auto;
-    height: 150px;
+.tooltip-wrapper {
+    position: relative;
+    display: inline-block;
+    
+    cursor: help;
+}
+
+.tooltip-span {
+    visibility: hidden;
+    position: absolute;
+    width: 120px;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -60px;
+    background-color: #363636;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    font-size: 10px;
+    z-index: 1;
+}
+
+.tooltip-span::after {
+        content: "";
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: #555 transparent transparent transparent;
+        font-size: 8px;
+    }
+
+.tooltip-wrapper:hover span {
+    visibility: visible;
 }
