Bugs in Create Edit Recipe & Deletion State update fixed

--- a/RecipeApp/Pages/AdminRecipe.razor
+++ b/RecipeApp/Pages/AdminRecipe.razor
@@ -103,5 +103,6 @@
     {
         if(await JsRuntime.InvokeAsync<bool>("confirm", "Are you sure?"))
             State.DeleteRecipe(id, tagIdList);
+        StateHasChanged();
     }
 }
