--- a/RecipeApp/Shared/TemplatedDialog.razor
+++ b/RecipeApp/Shared/TemplatedDialog.razor
@@ -20,7 +20,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        JsRuntime.
+        await JsRuntime.
             InvokeVoidAsync("keypress.init", DotNetObjectReference.Create(this));
     }
 
