--- a/RecipeApp/Pages/_Layout.cshtml
+++ b/RecipeApp/Pages/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="RecipeApp.styles.css" rel="stylesheet" />
     <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
+    
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -28,7 +29,8 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" 
+        integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="_framework/blazor.server.js"></script>
     <script src="~/blazor-modal.js"></script>
 </body>
