--- a/RecipeApp/Pages/AdminRecipe.razor
+++ b/RecipeApp/Pages/AdminRecipe.razor
@@ -9,11 +9,13 @@
 
 
     <PageTitle>@title</PageTitle>
-    <h3>Recipe Management</h3>
-    <button @onclick="() => State.ShowCreateDialog(Guid.Empty)"
+<h3>Recipe Management</h3>
+    <Tooltip Text="Add a new recipe">
+    <button @onclick="() => State.ShowRecipeDialog(Guid.Empty)"
             class="btn btn-primary">
         Create a new Recipe
     </button>
+</Tooltip>
 
     @if (State.RecipeList == null)
     {
@@ -58,14 +60,18 @@
                         }
                     </th>
                     <th>
-                        <button @onclick="() => State.ShowCreateDialog(item.Id)"
-                                class="btn btn-primary">
-                            Edit
-                        </button>
-                        <button class="btn btn-danger"
-                                @onclick="() => { DeleteRecipeCheck(item.Id, item.TagList.Where(tag => tag != null).Select(tags => tags.TagId).ToList()); }">
-                            Delete
-                        </button>
+                        <Tooltip Text="@ApplicationMessages.ModifyRecipeButton">
+                            <button @onclick="() => State.ShowRecipeDialog(item.Id)"
+                                    class="btn btn-primary">
+                                Edit
+                            </button>
+                        </Tooltip>
+                        <Tooltip Text="@ApplicationMessages.DeleteRecipeButton">
+                            <button class="btn btn-danger"
+                                    @onclick="() => { DeleteRecipeCheck(item.Id, item.TagList.Where(tag => tag != null).Select(tags => tags.TagId).ToList()); }">
+                                Delete
+                            </button>
+                        </Tooltip>
                     </th>
                 </tr>
             }
@@ -76,7 +82,7 @@
 
 <TemplatedDialog Show="@State.ShowDialogCreate">
 
-    <CreateRecipeDialog
+    <RecipeDialog
         Recipe="State.NewRecipe"
         OnCancel="State.RemoveDialog"
         OnConfirm="State.ConfirmRecipe"/>
@@ -87,7 +93,7 @@
 @code {
 
     private string title = "Recipe Management";
-    
+
 
     protected override async Task OnInitializedAsync()
     {
