--- a/RecipeApp/Shared/TemplatedDialog.razor
+++ b/RecipeApp/Shared/TemplatedDialog.razor
@@ -18,7 +18,7 @@
     public bool Show { get; set; }
    
 
-    protected override async Task OnInitializedAsync()
+    protected async override Task OnAfterRenderAsync(bool firstRender)
     {
         await JsRuntime.
             InvokeVoidAsync("keypress.init", DotNetObjectReference.Create(this));
